--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@ body {
   box-sizing: border-box;
 }
 
+select {
+  border-color: transparent !important;
+}
+
 .button_none-focus:focus {
   outline: none;
   box-shadow: 0 0 0 3px rgba(66, 153, 225, 0) !important;
